--- a/css/style.css
+++ b/css/style.css
@@ -70,10 +70,10 @@
 }
 
 .drop_container {
-	width: 790px;
+	width: 675px;
 	height: 600px;
 	position: absolute;
-	right: 0px;
+	right: 115px;
 	top: 160px;
 }
 
@@ -157,9 +157,9 @@
 
 .year_desc_cell { /* CSS Styles for the bottom paragraphs */
 	width: 112.8px;
-	height: 150px;
+	height: 245px;
 	font-family: Georgia;
-	font-size: 12px;
+	font-size: 10px;
 	line-height: 15px;
 	float: left;
 	padding-left: 1px;
@@ -185,8 +185,8 @@ textarea {
 }
 
 .zoom_container {
-	width: 600px;
-	height: 635px;
+	width: 90vw;
+	height: 100vh;
 	position: absolute;
 	left: 50%;
 	top: 50%;
@@ -194,8 +194,8 @@ textarea {
 }
 
 .zoom_image {
-	width: 600px;
-	height: 600px;
+	width: calc(100vh - 30px);
+	height: calc(100vh - 30px);
 	position: absolute;
 	left: 50%;
 	top: 0px;
@@ -219,7 +219,7 @@ textarea {
 	color: white;
 	width: 100%;
 	text-align: center;
-	bottom: 0px;
+	bottom: 10px;
 }
 
 
